# ws-client

./: Cargo.toml  Makefile  index.html
src/: app.rs  main.rs
src/components/: chat_view.rs  input.rs  message.rs  mod.rs
src/services/: websocket.rs
static/: style.css
