[package]
name = "leptos-chat-client"
version = "0.1.0"
edition = "2021"

[dependencies]
leptos = { version = "0.5", features = ["csr"] }
leptos_meta = { version = "0.5", features = ["csr"] }
leptos_router = { version = "0.5", features = ["csr"] }
gloo-net = "0.4"
gloo = "0.8"
web-sys = { version = "0.3", features = [
    "WebSocket",
    "MessageEvent",
    "BinaryType",
] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
pulldown-cmark = "0.9"
thiserror = "1.0"
console_error_panic_hook = "0.1"
uuid = { version = "1.4", features = ["v4", "js"] }
js-sys = "0.3"
